# BaguetteWorkshopProject

./: .gitignore  .~lock.Описание.odt#  .~lock.Разработка документации и отчетных форм для внедрения программных средств.odt#  .~lock.Шаблон дипломной работы 2025-26.odt#  LabWork1.odt  LabWork2.odt  LabWork3.odt  LabWork4.odt  README.md  create tables.txt  installer.iss  setup.iss  ~$Кейс.docx  ~$лный функционал + фикс.docx  Кейс.docx  Описание.odt  Полный функционал + фикс.docx  Разработка документации и отчетных форм для внедрения программных средств.odt  Шаблон дипломной работы 2025-26.odt
.github/workflows/: release.yml
deployment/: deploy+installer.txt
docs/: Дипломный проект.docx  Полный функционал + фикс.docx  Разработка документации и отчетных форм для внедрения программных средств.odt  Речь.docx
docs/labs/: LabWork1.odt  LabWork2.odt  LabWork3.odt  LabWork4.odt
monitoring/: docker-compose.yml  prometheus.yml
project/: CMakeLists.txt  Main.qml  main.cpp
project/pages/: AccountManagementPage.qml  ClientsPage.qml  CreateFirstAdminPage.qml  CustomersPage.qml  DataManagementPage.qml  LoginPage.qml  LogsPage.qml  MastersOrdersPage.qml  MastersProductsPage.qml  OrdersPage.qml  ProductsPage.qml  RegistrationPage.qml  SalePage.qml
project/src/: DatabaseManager.cpp  DatabaseManager.h  Logger.cpp  Logger.h  logger.cpp  logger.h
